third_party/rust/pin-project/tests/ui/cfg/cfg_attr-unpin.stderr
error[E0277]: `std::marker::PhantomPinned` cannot be unpinned
  --> $DIR/cfg_attr-unpin.rs:18:5
   |
15 | fn is_unpin<T: Unpin>() {}
   |                ----- required by this bound in `is_unpin`
...
18 |     is_unpin::<Foo<PhantomPinned>>(); // ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `Foo<std::marker::PhantomPinned>`, the trait `std::marker::Unpin` is not implemented for `std::marker::PhantomPinned`
   |
   = note: required because it appears within the type `Foo<std::marker::PhantomPinned>`

error[E0277]: `std::marker::PhantomPinned` cannot be unpinned
  --> $DIR/cfg_attr-unpin.rs:20:5
   |
15 | fn is_unpin<T: Unpin>() {}
   |                ----- required by this bound in `is_unpin`
...
20 |     is_unpin::<Bar<PhantomPinned>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `__Bar<'_, std::marker::PhantomPinned>`, the trait `std::marker::Unpin` is not implemented for `std::marker::PhantomPinned`
   |
   = note: required because it appears within the type `__Bar<'_, std::marker::PhantomPinned>`
   = note: required because of the requirements on the impl of `std::marker::Unpin` for `Bar<std::marker::PhantomPinned>`
